# Multi-LLM-chat-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chat/: __init__.py  cost_tracker.py  session.py
providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py
tests/: conftest.py  test_cli.py  test_cost_tracker.py  test_groq_provider.py  test_providers_factory.py  test_session.py
utils/: __init__.py  cli.py  logging_config.py
